--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-yandex-maps": "^0.9.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
